--- a/src/site-preprocess/index.html
+++ b/src/site-preprocess/index.html
@@ -47,11 +47,11 @@
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 </head>
 <body>
-<a class="github-fork-ribbon right-top" href="https://github.com/@ORG@/@PKG@" title="Fork me on GitHub">Fork imce.sbt.plugin on GitHub</a>
+<a class="github-fork-ribbon right-top" href="https://@GIT@/@ORG@/@PKG@" title="Fork me on GitHub"/>
 
 <div id="container">
-    <h1><a href="https://github.com/@ORG@/@PKG@">@PKG@</a>
-        <span class=""small">by <a href="https://github.com/@ORG@">@ORG_NAME@</a></span>
+    <h1><a href="https://@GIT@/@ORG@/@PKG@">@PKG@</a>
+        <span class=""small">by <a href="https://@GIT@/@ORG@">@ORG_NAME@</a></span>
     </h1>
     <div class="description">
         @DESC@
@@ -68,17 +68,16 @@
     <h2>Contact</h2>
     <p><a href="mailto:nicolas.f.rouquette@jpl.nasa.gov">nicolas.f.rouquette@jpl.nasa.gov</a></p>
     <h2><a href="latest/api/index.html">Scaladoc</a></h2>
+    <h2><a href="dependencies.svg">SVG graph of all dependencies</a></h2>
     <h2><a href="LicenseReportOfAggregatedSBTPluginsAndLibraries.html">License report of third-party dependencies</a></h2>
     <h2>Continuous Integration</h2>
-    <p><a href="https://travis-ci.org/@ORG@/@PKG@"><img src="https://travis-ci.org/@ORG@/@PKG@.svg?branch=master"/></a></p>
-    <h2>Download</h2>
-    <p><a href='https://bintray.com/@SUBJECT@/@REPO@/@PKG@/_latestVersion'><img src='https://api.bintray.com/packages/@SUBJECT@/@REPO@/@PKG@/images/download.svg'></a></p>
+    <p><a href="@CI@">@CI@</a></p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
         by running:
-    <pre>$ git clone git://github.com/@ORG@/@PKG@</pre>
+    <pre>$ git clone git://@GIT@/@ORG@/@PKG@</pre>
     </p>
     <div class="footer">
-        get the source code on GitHub : <a href="http://github.com/@ORG@/@PKG@">@ORG@/@PKG@</a>
+        get the source code on GitHub: <a href="http://@GIT@/@ORG@/@PKG@">@ORG@/@PKG@</a>
     </div>
 </div>
 </body>
