Include version in gh-pages

--- a/src/site-preprocess/index.html
+++ b/src/site-preprocess/index.html
@@ -50,7 +50,7 @@
 <a class="github-fork-ribbon right-top" href="https://@GIT@/@ORG@/@PKG@" title="Fork me on GitHub"/>
 
 <div id="container">
-    <h1><a href="https://@GIT@/@ORG@/@PKG@">@PKG@</a>
+    <h1><a href="https://@GIT@/@ORG@/@PKG@">@PKG@</a> (Version: @VER@)
         <span class=""small">by <a href="https://@GIT@/@ORG@">@ORG_NAME@</a></span>
     </h1>
     <div class="description">
